--- a/FinalChallengeApp/Base.lproj/Main.storyboard
+++ b/FinalChallengeApp/Base.lproj/Main.storyboard
@@ -6,10 +6,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Tab Bar Controller-->
+        <!--View Controller-->
         <scene sceneID="bpE-O5-skr">
             <objects>
-                <tabBarController id="628-sI-Bge" sceneMemberID="viewController">
+                <tabBarController id="628-sI-Bge" customClass="ViewController" customModule="FinalChallengeApp" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="I50-rv-9bQ">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
