--- a/FinalChallengeApp/View/FinalChallengeApp/Base.lproj/Students.storyboard
+++ b/FinalChallengeApp/View/FinalChallengeApp/Base.lproj/Students.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="JLt-p9-X3O">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="JLt-p9-X3O">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -440,8 +440,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="uo3-a8-qQ3">
-                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <rect key="frame" x="0.0" y="132" width="414" height="730"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="730" id="acG-lE-mtZ"/>
+                                </constraints>
                                 <view key="tableFooterView" contentMode="scaleToFill" id="3Qk-LN-X0Z">
                                     <rect key="frame" x="0.0" y="112" width="414" height="0.0"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -479,13 +482,19 @@
                                     <outlet property="delegate" destination="3HD-r0-5Ss" id="sBJ-KD-CXO"/>
                                 </connections>
                             </tableView>
+                            <searchBar contentMode="redraw" misplaced="YES" searchBarStyle="minimal" translatesAutoresizingMaskIntoConstraints="NO" id="fWr-Jf-juO">
+                                <rect key="frame" x="0.0" y="88" width="414" height="44"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstItem="uo3-a8-qQ3" firstAttribute="top" secondItem="fWr-Jf-juO" secondAttribute="bottom" id="D8I-LG-i1H"/>
                             <constraint firstItem="EW2-Al-361" firstAttribute="bottom" secondItem="uo3-a8-qQ3" secondAttribute="bottom" id="E1T-bG-uou"/>
                             <constraint firstItem="EW2-Al-361" firstAttribute="trailing" secondItem="uo3-a8-qQ3" secondAttribute="trailing" id="O0U-85-tv3"/>
-                            <constraint firstItem="uo3-a8-qQ3" firstAttribute="top" secondItem="EW2-Al-361" secondAttribute="top" id="b48-IY-EBE"/>
                             <constraint firstItem="uo3-a8-qQ3" firstAttribute="leading" secondItem="EW2-Al-361" secondAttribute="leading" id="mo8-24-zwr"/>
+                            <constraint firstItem="uo3-a8-qQ3" firstAttribute="leading" secondItem="fWr-Jf-juO" secondAttribute="leading" id="nNu-bB-1wc"/>
+                            <constraint firstItem="uo3-a8-qQ3" firstAttribute="trailing" secondItem="fWr-Jf-juO" secondAttribute="trailing" id="sNM-vd-KjH"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="EW2-Al-361"/>
                     </view>
@@ -497,12 +506,13 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="searchBar" destination="fWr-Jf-juO" id="hTS-XN-84d"/>
                         <outlet property="tableView" destination="uo3-a8-qQ3" id="WDw-EV-vms"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Tal-Rt-qOL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2783" y="-106"/>
+            <point key="canvasLocation" x="2782.608695652174" y="-106.47321428571428"/>
         </scene>
         <!--Summary View Controller-->
         <scene sceneID="t9R-KQ-MEp">
